# packt-rust-web-programming

./: README.md
cap1/: Cargo.toml
cap1/src/: main.rs
cap2/web_app/: Cargo.toml
cap3/futures_learning/: Cargo.toml
cap3/usando_futures/: Cargo.toml
cap3/web_app/: Cargo.toml
cap4/web_app/: Cargo.toml  state.json
cap5/desktop/: package-lock.json  (+1 more)
cap6/web_app/: Cargo.toml  diesel.toml
cap6/web_app/css/: base.css
cap6/web_app/migrations/2024-09-30-221418_create_to_do_items/: down.sql
cap6/web_app/scripts/: wait_for_database.sh
cap6/web_app/src/: config.rs  database.rs  jwt.rs  main.rs
cap6/web_app/src/json_serialization/: to_do_items.rs
cap6/web_app/src/models/item/: item.rs  new_item.rs
cap6/web_app/src/to_do/: enums.rs
cap6/web_app/src/to_do/structs/: done.rs  pending.rs
cap6/web_app/src/to_do/traits/: get.rs
cap6/web_app/src/views/: mod.rs
cap6/web_app/src/views/app/: items.rs  mod.rs
cap6/web_app/src/views/auth/: mod.rs
cap6/web_app/src/views/to_do/: create.rs  delete.rs  edit.rs
cap7/: docker-compose.yml
cap7/web_app/: Cargo.toml  diesel.toml  docker-compose.yml
cap7/web_app/migrations/2024-09-30-221418_create_to_do_items/: up.sql
cap7/web_app/src/: database.rs  main.rs
cap7/web_app/src/json_serialization/: to_do_item.rs  to_do_items.rs
cap7/web_app/src/models/user/: mod.rs  new_user.rs  user.rs
cap7/web_app/src/templates/: 404.html
cap7/web_app/src/to_do/: enums.rs
cap7/web_app/src/views/app/: items.rs
cap7/web_app/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs
cap7/web_app/templates/: main.html
(+61 files in other folders)
