[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
