[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.8.0"
argon2 = "0.5.3"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
